Salesforce/main/default/main/default/objects/CRM_Evento_Offline__c/CRM_Evento_Offline__c.object-meta.xml
<CustomObject>
    <label>CRM Evento Offline</label>
    <nameField>
        <displayFormat>EV-{000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRM Eventos Offline</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>