Salesforce/main/default/main/default/objects/CRM_Evento_Offline__c/fields/Area_Colhida_1__c.field-meta.xml
<CustomField>
    <fullName>Area_Colhida_1__c</fullName>
    <label>Area Colhida 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>