Salesforce/main/default/main/default/objects/CRM_Evento_Offline__c/fields/Area_Plantada_2__c.field-meta.xml
<CustomField>
    <fullName>Area_Plantada_2__c</fullName>
    <label>Area Plantada 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>