Salesforce/main/default/main/default/objects/CRM_Evento_Offline__c/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cidade</label>
    <referenceTo>Cidade__c</referenceTo>
    <relationshipLabel>CRM Eventos Offline</relationshipLabel>
    <relationshipName>CRM_Eventos_Offline</relationshipName>
    <type>Lookup</type>
</CustomField>