Salesforce/main/default/main/default/objects/CRM_Evento_Offline__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CRM Eventos Offline</relationshipLabel>
    <relationshipName>CRM_Eventos_Offline</relationshipName>
    <type>Lookup</type>
</CustomField>