Salesforce/main/default/main/default/objects/CRM_Evento_Offline__c/fields/Cultivar_1__c.field-meta.xml
<CustomField>
    <fullName>Cultivar_1__c</fullName>
    <label>Cultivar 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cultivar</valueSetName>
    </valueSet>
</CustomField>