Salesforce/main/default/main/default/objects/CRM_Evento_Offline__c/fields/Cultivar_2__c.field-meta.xml
<CustomField>
    <fullName>Cultivar_2__c</fullName>
    <label>Cultivar 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cultivar</valueSetName>
    </valueSet>
</CustomField>