Salesforce/main/default/main/default/objects/CRM_Evento_Offline__c/fields/Custo__c.field-meta.xml
<CustomField>
    <fullName>Custo__c</fullName>
    <label>Custo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>