Salesforce/main/default/main/default/objects/CRM_Evento_Offline__c/fields/Data_de_Colheita_2__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Colheita_2__c</fullName>
    <label>Data de Colheita 2</label>
    <type>Date</type>
</CustomField>