Salesforce/main/default/main/default/objects/CRM_Evento_Offline__c/fields/Data_de_Plantio_1__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Plantio_1__c</fullName>
    <label>Data de Plantio 1</label>
    <type>Date</type>
</CustomField>