Salesforce/main/default/main/default/objects/CRM_Evento_Offline__c/fields/Data_e_horario_termino__c.field-meta.xml
<CustomField>
    <fullName>Data_e_horario_termino__c</fullName>
    <label>Data e horario termino</label>
    <type>DateTime</type>
</CustomField>