Salesforce/main/default/main/default/objects/CRM_Evento_Offline__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <defaultValue>&quot;NUEVO&quot;</defaultValue>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NUEVO</fullName>
            </value>
            <value>
                <fullName>SINC CAB OK</fullName>
            </value>
            <value>
                <fullName>SINC ITEMS OK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>