Salesforce/main/default/main/default/objects/CRM_Evento_Offline__c/fields/Longitud__c.field-meta.xml
<CustomField>
    <fullName>Longitud__c</fullName>
    <label>Longitud</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>