Salesforce/main/default/main/default/objects/CRM_Evento_Offline__c/fields/Obtentor_2__c.field-meta.xml
<CustomField>
    <fullName>Obtentor_2__c</fullName>
    <label>Obtentor 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Obtentor</valueSetName>
    </valueSet>
</CustomField>