Salesforce/main/default/main/default/objects/CRM_Evento_Offline__c/fields/Participante__c.field-meta.xml
<CustomField>
    <fullName>Participante__c</fullName>
    <label>Participante</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anderson Clayton Weissheimer</fullName>
            </value>
            <value>
                <fullName>Andre Aguilar</fullName>
            </value>
            <value>
                <fullName>Arquimedes Gonçalves De Moura</fullName>
            </value>
            <value>
                <fullName>Augusto Cesar Teodoro Rodrigues</fullName>
            </value>
            <value>
                <fullName>Augusto Gelain Rebeschini</fullName>
            </value>
            <value>
                <fullName>Bruno De Moraes Ribeiro</fullName>
            </value>
            <value>
                <fullName>Bruno Fiorin Zaninetti</fullName>
            </value>
            <value>
                <fullName>Carlos Martinelli</fullName>
            </value>
            <value>
                <fullName>Cesar De Matos Silva</fullName>
            </value>
            <value>
                <fullName>Cezar Marchesan</fullName>
            </value>
            <value>
                <fullName>Christian Rodrigues</fullName>
            </value>
            <value>
                <fullName>Cristian Pirolli</fullName>
            </value>
            <value>
                <fullName>Daniel Vidal</fullName>
            </value>
            <value>
                <fullName>Davi Genes Teixeira Lima</fullName>
            </value>
            <value>
                <fullName>Diego Batista Rocha</fullName>
            </value>
            <value>
                <fullName>Diego Francisco Gonçalves</fullName>
            </value>
            <value>
                <fullName>Edson Chambo Ruiz Junior</fullName>
            </value>
            <value>
                <fullName>Eduardo Silvestrini Tonello</fullName>
            </value>
            <value>
                <fullName>Emanuel Augusto Coutinho da Silva</fullName>
            </value>
            <value>
                <fullName>Emerson Yassunori Ito</fullName>
            </value>
            <value>
                <fullName>Fagner Regis de Oliveira</fullName>
            </value>
            <value>
                <fullName>Felipe Dalsasso</fullName>
            </value>
            <value>
                <fullName>Felipe Manoel Alves</fullName>
            </value>
            <value>
                <fullName>Felipe Oliveira Da Costa</fullName>
            </value>
            <value>
                <fullName>Fernando Calazans</fullName>
            </value>
            <value>
                <fullName>Fernando Frenher</fullName>
            </value>
            <value>
                <fullName>Fernando Ichikawa</fullName>
            </value>
            <value>
                <fullName>Flavio Marcal Dos Santos</fullName>
            </value>
            <value>
                <fullName>Geovani Otowicz</fullName>
            </value>
            <value>
                <fullName>Guilherme Barivieira</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>