Salesforce/main/default/main/default/objects/CRM_Evento_Offline__c/fields/Revenda__c.field-meta.xml
<CustomField>
    <fullName>Revenda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenda</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CRM Eventos Offline (Revenda)</relationshipLabel>
    <relationshipName>CRM_Eventos_Offline_revenda</relationshipName>
    <type>Lookup</type>
</CustomField>