Salesforce/main/default/main/default/objects/CRM_Evento_Offline__c/fields/Usar_coordenadas_da_Cidade__c.field-meta.xml
<CustomField>
    <fullName>Usar_coordenadas_da_Cidade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Usar coordenadas da Cidade</label>
    <type>Checkbox</type>
</CustomField>