Salesforce/main/default/main/default/objects/CRM_Evento_Offline__c/fields/Volume_Doado_1__c.field-meta.xml
<CustomField>
    <fullName>Volume_Doado_1__c</fullName>
    <label>Volume Doado 1</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>