Salesforce/main/default/main/default/objects/CRM_Evento_Offline__c/recordTypes/Lado_a_Lado.recordType-meta.xml
<RecordType>
    <fullName>Lado_a_Lado</fullName>
    <active>true</active>
    <label>Lado a Lado</label>
</RecordType>