Salesforce/main/default/main/default/objects/CRM_Evento_Offline__c/recordTypes/Treinamento.recordType-meta.xml
<RecordType>
    <fullName>Treinamento</fullName>
    <active>true</active>
    <label>Treinamento</label>
</RecordType>